--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,10 @@ authors = ["Jacob-Short <thatmanjshort@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 Django = "^3.2.7"
+requests = "^2.26.0"
 
 [tool.poetry.dev-dependencies]
+black = {version = "^21.9b0", allow-prereleases = true}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
