--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["Jacob-Short <thatmanjshort@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 Django = "^3.2.7"
+Pillow = "^8.3.2"
+requests = "^2.26.0"
 
 [tool.poetry.dev-dependencies]
 
