--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ Pillow = "^8.3.2"
 requests = "^2.26.0"
 
 [tool.poetry.dev-dependencies]
+black = {version = "^21.9b0", allow-prereleases = true}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
