--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -9,6 +9,8 @@ python = "^3.9"
 Django = "^3.2.7"
 Pillow = "^8.3.2"
 requests = "^2.26.0"
+djangorestframework = "^3.12.4"
+django-cors-headers = "^3.10.0"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^21.9b0", allow-prereleases = true}
