--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.9"
 Django = "^3.2.7"
 Pillow = "^8.3.2"
 requests = "^2.26.0"
+django-mptt = "^0.13.4"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^21.9b0", allow-prereleases = true}
