--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ requests = "^2.26.0"
 django-mptt = "^0.13.4"
 secure-smtplib = "^0.1.1"
 python-dotenv = "^0.19.1"
+django-crispy-forms = "^1.13.0"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^21.9b0", allow-prereleases = true}
