--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ django-mptt = "^0.13.4"
 secure-smtplib = "^0.1.1"
 python-dotenv = "^0.19.1"
 django-crispy-forms = "^1.13.0"
+pyttsx3 = "^2.90"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^21.9b0", allow-prereleases = true}
