--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ secure-smtplib = "^0.1.1"
 python-dotenv = "^0.19.1"
 django-crispy-forms = "^1.13.0"
 pyttsx3 = "^2.90"
+gunicorn = "^20.1.0"
+whitenoise = "^5.3.0"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^21.9b0", allow-prereleases = true}
