--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,13 @@
-asgiref @ file:///home/jacob/.cache/pypoetry/artifacts/c3/92/1c/3d42ce7ad1e9e2aa1621c3fa8ebc5e21bd880a768bd691fb4f0356baa8/asgiref-3.4.1-py3-none-any.whl
-black @ file:///home/jacob/.cache/pypoetry/artifacts/87/70/6f/f505aa82fe0bdb4c2bed841dc9786f581e0612d5de2d0e07ad0494cd12/black-21.9b0-py3-none-any.whl
-certifi @ file:///home/jacob/.cache/pypoetry/artifacts/cd/2c/dc/e5bfda594e18f3f1e9af9f11e13581014d821425f325f3220b3ed2c337/certifi-2021.5.30-py2.py3-none-any.whl
-charset-normalizer @ file:///home/jacob/.cache/pypoetry/artifacts/31/5b/97/f445b376c92fe733c9eb0773673b5b07779d0d4eb80119fa165f95a037/charset_normalizer-2.0.6-py3-none-any.whl
-click @ file:///home/jacob/.cache/pypoetry/artifacts/ae/32/83/e159324c1bd58177322f4e45f598d500fe22544bff20f53f55cf749da8/click-8.0.1-py3-none-any.whl
-Django @ file:///home/jacob/.cache/pypoetry/artifacts/c3/8c/59/50a3c14099a0ad0818e40ea40af0446cd732882bbed86d63e115ffcf0d/Django-3.2.7-py3-none-any.whl
-django-crispy-forms @ file:///home/jacob/.cache/pypoetry/artifacts/a1/8a/c7/6256c95c77825d805222e5381a8e469719eb4ac1fb81a1883128cc6697/django_crispy_forms-1.13.0-py3-none-any.whl
-django-js-asset @ file:///home/jacob/.cache/pypoetry/artifacts/00/7c/b4/e3ecaf08b9600fd79e9d915c0d908b307b9ce8de512033d71731d19cbc/django_js_asset-1.2.2-py2.py3-none-any.whl
-django-mptt @ file:///home/jacob/.cache/pypoetry/artifacts/73/e2/c2/a5083885801cb8f506cd951d7a8958db9eb9cac29b13287864eabe695c/django_mptt-0.13.4-py3-none-any.whl
-gunicorn @ file:///home/jacob/.cache/pypoetry/artifacts/d4/22/ea/fb991f1fdb4e8ae8fd30e0bce3c23ece991aa75df3f5a4c4f4d5aba6ae/gunicorn-20.1.0-py3-none-any.whl
-idna @ file:///home/jacob/.cache/pypoetry/artifacts/ff/0d/80/b45ae1ddba13a20e406682fd42ce6c201d9bedc5f592bee00cf799a1fb/idna-3.2-py3-none-any.whl
-mypy-extensions @ file:///home/jacob/.cache/pypoetry/artifacts/92/45/bf/1807ce854ff668d92602207a37bfa9316def2a3f257bd03c4c5be4bc9b/mypy_extensions-0.4.3-py2.py3-none-any.whl
-pathspec @ file:///home/jacob/.cache/pypoetry/artifacts/0a/67/21/620031f7f2938bad77b057a68a4c2a334542a7402a3214ed48690caf8c/pathspec-0.9.0-py2.py3-none-any.whl
-Pillow @ file:///home/jacob/.cache/pypoetry/artifacts/e2/63/33/450f579e8ec594e5faa794106364a01da86e2dd6e1825f228f7a2971d6/Pillow-8.3.2-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
-platformdirs @ file:///home/jacob/.cache/pypoetry/artifacts/e1/59/0b/22d8aa7abf81893c008cf163b80149f535966cf2bde442c26abceac0cb/platformdirs-2.4.0-py3-none-any.whl
-python-dotenv @ file:///home/jacob/.cache/pypoetry/artifacts/6c/fc/7e/fc5c5c70d6875bbe5f00d4fbc88aa5ad2c93665b199e32a49140c891bb/python_dotenv-0.19.1-py2.py3-none-any.whl
-pyttsx3 @ file:///home/jacob/.cache/pypoetry/artifacts/b7/4b/17/ff2d4eaf657403bc014030508915b49cabee664d8f926d5214413e8d38/pyttsx3-2.90-py3-none-any.whl
-pytz @ file:///home/jacob/.cache/pypoetry/artifacts/3e/f3/dd/6629bf5ed0a970a128e0a015f2af3b67280e749a56fdaabdaa06d5fc6b/pytz-2021.3-py2.py3-none-any.whl
-regex @ file:///home/jacob/.cache/pypoetry/artifacts/cc/0d/de/d22ef4159810cd93a4b11d4a483b95dd52d1d998773f258aa742d225d5/regex-2021.9.30-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
-requests @ file:///home/jacob/.cache/pypoetry/artifacts/13/00/3d/5574756561eed6b522f5b13d5a2c05c2920860b05b1e687c3792495ba0/requests-2.26.0-py2.py3-none-any.whl
-secure-smtplib @ file:///home/jacob/.cache/pypoetry/artifacts/00/4f/0c/70626464ce606ff4805689d8af706b122d12a69196c4cdfb5c38672f9f/secure_smtplib-0.1.1-py2.py3-none-any.whl
-sqlparse @ file:///home/jacob/.cache/pypoetry/artifacts/ea/fd/ba/117a876397913faee210ef8bac93829e22ad9232662e656971383c0718/sqlparse-0.4.2-py3-none-any.whl
-tomli @ file:///home/jacob/.cache/pypoetry/artifacts/7b/a4/22/559325a4271b73ba93b936f2b2953235fba10bd955a50a9c0323354809/tomli-1.2.1-py3-none-any.whl
-typing-extensions @ file:///home/jacob/.cache/pypoetry/artifacts/4e/df/c9/f8b546ab8ea4b39e1c4f91a8360f6091cc3497ef3f9eb8fa65c0375b03/typing_extensions-3.10.0.2-py3-none-any.whl
-urllib3 @ file:///home/jacob/.cache/pypoetry/artifacts/55/46/d1/1acba0600879bfaada54191116fbaea89a464f437b3f949bc9c2a220e7/urllib3-1.26.7-py2.py3-none-any.whl
-whitenoise @ file:///home/jacob/.cache/pypoetry/artifacts/7e/3f/f1/316ef7ba0ce1f636d99477504c03872cc272ff4c882a6d643a6991598c/whitenoise-5.3.0-py2.py3-none-any.whl
+black==21.9b0
+certifi==2021.10.8
+charset-normalizer==2.0.7
+click==8.0.3
+idna==3.3
+mypy-extensions==0.4.3
+pathspec==0.9.0
+platformdirs==2.4.0
+regex==2021.10.21
+requests==2.26.0
+tomli==1.2.1
+typing-extensions==3.10.0.2
+urllib3==1.26.7
