--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,29 @@
-black==21.9b0
-certifi==2021.10.8
-charset-normalizer==2.0.7
-click==8.0.3
-idna==3.3
-mypy-extensions==0.4.3
-pathspec==0.9.0
-platformdirs==2.4.0
-regex==2021.10.21
-requests==2.26.0
-tomli==1.2.1
-typing-extensions==3.10.0.2
-urllib3==1.26.7
+asgiref===3.4.1     
+black===21.9b0    
+certifi===2021.5.30 
+charset-normalizer===2.0.6     
+click===8.0.1     
+dj-database-url===0.5.0     
+django===3.2.7     
+django-crispy-forms===1.13.0    
+django-heroku===0.3.1     
+django-js-asset===1.2.2     
+django-mptt===0.13.4    
+gunicorn===20.1.0    
+idna===3.2       
+mypy-extensions===0.4.3     
+pathspec===0.9.0     
+pillow===8.3.2     
+platformdirs===2.4.0     
+psycopg2===2.9.1     
+python-dotenv===0.19.1    
+pyttsx3===2.90      
+pytz===2021.3    
+regex===2021.9.30 
+requests===2.26.0    
+secure-smtplib===0.1.1     
+sqlparse===0.4.2     
+tomli===1.2.1     
+typing-extensions===3.10.0.2  
+urllib3===1.26.7    
+whitenoise===5.3.0     
